@@ -1,3 +1,7 @@
+2005-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/main.cc (setup_paths)[ARGV0_RELOCATION]: 
+
 2005-05-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* lily/horizontal-bracket.cc (print): Take care of the direction
